# audio_system

./: .gitignore  CMakeLists.txt  README.md  Toolchain-linux_mingw.cmake  cmake_toolchain_mingw.sh  sound_system.pro
include/: audio_buffer.h  audio_listener.h  audio_source.h  audio_system.h  file_system.h
include/AL/: alu.h  alut.h
src/: audio_buffer.cpp  audio_listener.cpp  audio_source.cpp  audio_system.cpp  file_system.cpp  file_system.cpp~  main.cpp
wrapper/C/: audio_system_wrap.h
wrapper/FreePascal/: uaudiosystem.pas
